--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.1",
     "superagent": "^3.8.2",
-    "superagent-promise": "^1.1.0"
+    "superagent-promise": "^1.1.0",
+    "dot-env": "^0.0.1"
   },
   "scripts": {
-    "start": "cross-env PORT=4100 react-scripts start",
+    "start": "cross-env react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env PORT=4100 react-scripts test --env=jsdom",
+    "test": "cross-env react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
